--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -18,7 +18,7 @@
   &__img {
     height: 155px;
     width: 170px;
-    margin: 0 0 42px;
+    margin-bottom: 42px;
     padding: 15px 2px 0;
     border: 3px solid transparent;
     transition: transform 1s;
