--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -23,7 +23,7 @@
     padding: 23px 0;
 
     text-transform: uppercase;
-    color: #000;
+    color: $nav-text-color;
     text-decoration: none;
     font-weight: 500;
     font-size: 12px;
