--- a/src/styles/catalog.scss
+++ b/src/styles/catalog.scss
@@ -1,9 +1,11 @@
 .catalog {
-  display: flex;
-  flex-wrap: wrap;
-  max-width: $catalog-width;
+  display: grid;
+  grid-template-columns: repeat(4, $card-width);
+  grid-column-gap: 48px;
+  grid-row-gap: 50px;
+  justify-content: center;
 
-  &__card {
-    margin: 0 $card-wrap 50px;
+  @media (max-width: 980px) {
+    grid-template-columns: repeat(auto-fill, $card-width);
   }
 }
